Fixed checkout steps visibility and improved cart functionality

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -20,6 +20,7 @@
   }
   
   .navbar__right {
+    margin-left: -10px;
     font-size: 45px;
     font-weight: bold;
     display: flex;
